# MCP_search-tool

./: README.md  main.py  pyproject.toml  requirements.txt
client/: gemini_client.py
server/: search_server.py
